# llm_inference

./: .bazelrc  .gitignore  BUILD  GEMINI.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  common.h  compare_tensors.py  diff_with_llama_cpp.sh  format.sh  gguf.cpp  gguf.h  gguf_test.cpp  main.cpp  model.cpp  model.h  model_test.cpp  ops.cpp  ops.h  ops_test.cpp  profile.sh  run.sh  setup.sh  setup_llama_cpp.sh  tensor.h  test.sh  thread_pool.h  update_gemini.sh
.github/workflows/: test.yml
metal/: BUILD  context.cpp  context.h  kernels.metal  ops.cpp  ops.h
